welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:10: error: value unary_! is not a member of Unit
while (!positionFinale==false){
       ^